# gemini-iptv

./: README.md  package.json  vite.config.ts  walkthrough.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: provider.tsx
src/app/routes/: home.tsx
src/components/: CategoryBrowser.tsx  Login.tsx  Player.tsx
src/config/: env.ts
src/services/: db.ts  syncService.ts  tauriXtream.ts
src/store/: useAppStore.ts
src/utils/: proxy.ts
